--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
@@ -43,13 +43,14 @@
                 </select> 
             </div>
             <div class="col-xl-4">
-                <label for=""class="quote-label">Quotation Expiry Date</label>
-                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveToDate">
+                <label for=""class="quote-label">Request for quote date</label>
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" (change)="updateQuotationExpiryDate($event)" formControlName="RFQDate">
             </div>
             <div class="col-xl-4">
-                <label for=""class="quote-label">Request for quote date</label>
-                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveFromDate">
+                <label for=""class="quote-label">Quotation Expiry Date</label>
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="expiryDate">
             </div>
+          
            
           </div>
        
@@ -64,7 +65,10 @@
                 </div>
                 <div class="col-xl-4">
                     <label for=""class="quote-label">Introducer</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="introducerCode">
+                    <select class="form-select form-select-sm mb-1" id="quote-input" formControlName="introducerCode" placement="right" >
+                        <option selected="true" disabled="disabled"></option> 
+                        <option *ngFor="let data of introducers"  [value]="data.code">{{data.surName}}</option>
+                    </select>  
                 </div>
                 <div class="col-xl-4">      
                     <label for=""class="quote-label">Likelihood</label>
@@ -114,49 +118,50 @@
           <p class="more" (click)="show=!show" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">More Details <span class="ml-1" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" > <i class="pi pi-angle-double-up" style="font-size:13px" *ngIf="!show" data-toggle="collapse" data-target="#collapseExample"></i><i class="pi pi-angle-double-down" style="font-size:13px" *ngIf="show" data-toggle="collapse" data-target="#collapseExample"></i></span> </p>
         </div>
     </div>
+    </form>
     <div class="card mb-4">
         <div class="card-body">
           <h6>Product Details </h6>
+          <form [formGroup]="quotationForm">
           <div class="row mt-3 mb-3">
             <div class="col-xl-4">
                 <label for=""class="quote-label">Product</label>
                 <select class="form-select form-select-sm mb-1" id="quote-input" formControlName="productCode" placement="right" >
                     <option selected="true" disabled="disabled"></option> 
-                    <option *ngFor="let data of products"  [value]="data.code">{{data.description}}</option>
+                    <option *ngFor="let data of products" (click)="getProductClause(data.code)" [value]="data.code">{{data.description}}</option>
                 </select> 
             </div>
+
+
+
             <div class="col-xl-4">
-                <label for=""class="quote-label">Payment Frequency</label>
-                <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="fequencyOfPayment"  placement="right" >
-                    <option selected="true" disabled="disabled"></option>
-                    <option value="A">Annually</option>
-                    <option value="S">Semi Annually</option>
-                    <option value="Q">Quarterly</option>
-                    <option value="M">Monthly</option>
-                    <option value="O">One-Off</option>
-                  </select >
+                <label for=""class="quote-label">Cover From</label><br>
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" (change)="updateCoverToDate($event)" formControlName="withEffectiveFromDate">
             </div>
-
-
             <div class="col-xl-4">
-                <label for=""class="quote-label">Cover time</label><br>
-                <p-calendar selectionMode="range" [readonlyInput]="true"  id="quote-date"  dateFormat="dd.mm.yy" formControlName="dateRange"></p-calendar>
-                  
-                <!-- <input type="number" id="quote-input" class="form-control form-control-sm mb-1" > -->
+                <label for=""class="quote-label">Cover To</label><br>
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveToDate">
             </div>
           </div>
-          <div>
+          
+        </form>
+        </div>
+        <div class="card-body">
             <p class="mb-4">Import risks <input type="checkbox" (change)="isChecked = !isChecked" id="importRisks" class="ml-3"></p>
             
             <p class="more" (click)="showProduct=!showProduct" data-bs-toggle="collapse" data-bs-target="#collapseProductClauses">Product Clauses<span class="ml-1" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" > <i class="pi pi-angle-double-up" style="font-size:13px" *ngIf="!showProduct" data-toggle="collapse" data-target="#collapseExample"></i><i class="pi pi-angle-double-down" style="font-size:13px" *ngIf="showProduct" data-toggle="collapse" data-target="#collapseExample"></i></span> </p>
             <div class="collapse" id="collapseProductClauses">
                 <p-table 
                 [value]="clauses"
-                [resizableColumns]="true" 
-                styleClass="p-datatable-sm"
-                class='ui-datatable' 
-               
-                [tableStyle]="{ 'min-width': '50rem' }">
+                dataKey="code" 
+              editMode="row" 
+              [tableStyle]="{'min-width': '50rem'}"
+              styleClass="p-datatable-sm"
+              responsiveLayout="scroll" 
+              class='ui-datatable'
+              [autoLayout]="true"
+              
+              >
                     <ng-template pTemplate="header">
                         <tr>
                             <th>Select</th>
@@ -165,35 +170,70 @@
                             <th>Editable</th>
                         </tr>
                     </ng-template>
-                    <ng-template pTemplate="body" let-clause>
-                        <tr>
+                    <ng-template pTemplate="body" let-data let-editing="editing" let-ri="rowIndex">
+                        <tr [pEditableRow]="data">
                             <td>
-                                <p-tableCheckbox [value]="clause"></p-tableCheckbox>
+                                <p-tableCheckbox [value]="data"></p-tableCheckbox>
+                            </td>
+                            <!-- <td>
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input">
+                                        <input pInputText type="text" [(ngModel)]="data.heading">
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{data.heading}}
+                                    </ng-template>
+                                </p-cellEditor>
+                            </td> -->
+                            <td  style=" white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            overflow-y: auto;
+                            max-width: 250px;">
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input" *ngIf="data.is_editable  === 'Y'">
+                                        <input pInputText type="text" [(ngModel)]="data.heading" class="form-control form-control-sm" [ngModelOptions]="{standalone: true}">
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{data.heading}}
+                                    </ng-template>
+                                </p-cellEditor>
                             </td>
                             <td style=" white-space: nowrap;
                             overflow: hidden;
                             text-overflow: ellipsis;
-                            overflow-y: auto;
-                            max-width: 250px;">{{ clause.heading }}</td>
-                            <td style=" white-space: nowrap;
-                            overflow: hidden;
-                            text-overflow: ellipsis;
                             max-width:300px;
-                            overflow-y: auto;">{{ clause.wording }}</td>
-                            <td>{{ clause.is_editable }}</td>
+                            overflow-y: auto;">
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input" *ngIf="data.is_editable  === 'Y'">
+                                        <input pInputText type="text" [(ngModel)]="data.wording" class="form-control form-control-sm" [ngModelOptions]="{standalone: true}">
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{data.wording}}
+                                    </ng-template>
+                                </p-cellEditor>
+                            </td>
                             
+                          
+                            <td *ngIf="data.is_editable  !== 'Y'" style="padding-left: 24px;" > -- </td>
+                            <td *ngIf="data.is_editable  === 'Y'">
+                                <div class="flex align-items-center justify-content-center gap-2">
+                                    <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow  icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
+                                    <button *ngIf="editing" pButton pRipple (click)="editRow(data,data.code)" type="button" pSaveEditableRow icon="pi pi-check" class="p-button-rounded p-button-text p-button-success mr-2"></button>
+                                    <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow icon="pi pi-times" class="p-button-rounded p-button-text p-button-danger"></button>
+                                </div>
+                            </td>
                         </tr>
                     </ng-template>
                 </p-table>
               </div>
           </div>
-        </div>
     </div>
 
-</form>
+
 
     <div class="float-end mb-4">
-        <button class="btn btn-primary" (click)="test()">Assign Tasks</button>
+        
         <button class="btn btn-primary"  (click)="getExistingQuotations()" >Next</button>
     </div>
     
