--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -43,18 +43,7 @@
             <div class="card-body">
               
                 <p class="sub-title">Details</p>
-                  <!-- <div class="row"> -->
-                    <!-- <div class="col-4">
-                      <p class="sub-title">Details</p>
-                    </div> -->
-                    <!-- <div class="col-8 d-flex justify-content-end">
-                      <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                        <i class="fa-solid fa-chevron-down"></i>
-                      </button>
-                    </div> -->
-                  <!-- </div>
-                   -->
-                  <!-- <div class="collapse mt-4" id="collapseExample"> -->
+                  
                    <div class="row">
                     <div class="col-md-4">
                         <div class="row">
@@ -223,7 +212,7 @@
                         <p class="cancel float-start">Cancel Quotation</p>
                         <div class="float-end">
                             <button class="btn btn-outline-primary" style="margin-right: 10px;" (click)="editDetails()">Edit Details</button>
-                            <button class="btn btn-primary">Compute Premium</button>
+                            <button class="btn btn-primary" (click)="computePremium()">Compute Premium</button>
     
                         </div>
                    <!-- </div> -->
@@ -231,12 +220,15 @@
                   
             </div>
     
-    
+            
             <div class="card mb-4">
+               
+
+               
                 <div class="card-body">
                   
                    
-                      <div class="row">
+                      <div class="row mb-4">
                         <div class="col-4">
                           <p class="sub-title">Product Details</p>
                         </div>
@@ -246,12 +238,29 @@
                           </button>
                         </div>
                       </div>
-                      
-                     
+                      <div class="collapse" id="productDetails">
+                        <p-table [value]="" [tableStyle]="{ 'min-width': '50rem' }">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Code</th>
+                                <th>Name</th>
+                                <th>Category</th>
+                                <th>Quantity</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-data>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </ng-template>
+                        </p-table>
+                      </div>
                       </div>
                       
                 </div>
-    
     
                 <div class="card mb-4">
                     <div class="card-body">
