--- a/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.html
@@ -7,7 +7,7 @@
 
         <div class="card-body mx-2 mt-2">
 
-            <button class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#selectClient">Select Client</button>
+            <button class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#selectClient">Select Existing Client</button>
             <h6 class="text-start mb-3">Prime identity</h6>
             <div class="row">
                 <div class="col-md-4">
@@ -22,15 +22,17 @@
             <div class="row mb-4">
                 <div class="col-md-4">
                     <label for="" class="quote-label">Client Type<span class="required" ></span></label>
-                    <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="clientTypeId"  placement="right" >
-                        <option selected="true" disabled="disabled"></option>
-                        <option value="I">Individual</option>
-                        <option value="C">Corporate</option>
-                       
+                    <br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" value="I" formControlName="clientTypeId" id="inlineRadio1" >
+                        <label class="form-check-label" for="inlineRadio1">Individual</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" value="C" formControlName="clientTypeId" id="inlineRadio2" >
+                        <label class="form-check-label" for="inlineRadio2">Corprate</label>
+                      </div>
+                  
 
-                      </select >
-
-                    <!-- <input type="text" id="quote-input" class="form-control form-control-sm mb-1"  formControlName="id" readonly> -->
                 </div>
                 <div class="col-md-4">
                     <label for="" class="quote-label">Identifier Type</label>
@@ -67,14 +69,16 @@
                 </div>
                 <div class="col-md-4">
                     <label for="" class="quote-label">Gender<span class="required" ></span></label>
-                    <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="gender"  placement="right" >
-                        <option selected="true" disabled="disabled"></option>
-                        <option value="M">Male</option>
-                        <option value="F">Female</option>
-                        <option value="P">Prefer Not to say</option>
-
-                      </select >
-
+                    <br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" value="F" formControlName="gender" id="inlineRadio1" >
+                        <label class="form-check-label" for="inlineRadio1">Female</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" value="M" formControlName="gender" id="inlineRadio2" >
+                        <label class="form-check-label" for="inlineRadio2">Male</label>
+                      </div>
+                 
 
 
                     
@@ -338,12 +342,12 @@
                     <h6 class="text-start mb-3">Upload documents</h6>
                 </div>
                 <div class="col-4 d-flex justify-content-end">
-                    <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#bankingDetails" aria-expanded="false" aria-controls="contactDetails">
+                    <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#uploadDocuments" aria-expanded="false" aria-controls="uploadDocuments">
                       <i class="fa-solid fa-chevron-down"></i>
                     </button>
                   </div>
                </div>
-               <div class="collapse mt-4" id="bankingDetails">
+               <div class="collapse mt-4" id="uploadDocuments">
                 <input type="file" id="inputProfileImg" formControlName="uploadFile" hidden [ngModel]="uploadFile" />
                 <label  for="inputProfileImg" class="img_upload"  style="margin-right: 15px;margin-top: 5px;">Choose File</label>
                 </div>
@@ -368,34 +372,38 @@
                         <i class="fa fa-search" ></i>
                     </button>
                   </span>
-                <input class="form-control py-2 border-start-0 "  style="background-color: #F5F6F8;border: 0px;" type="search" placeholder="search...">            
+                <input class="form-control py-2 border-start-0" pInputText  (input)="applyFilterGlobal($event, 'contains')"  style="background-color: #F5F6F8;border: 0px;" type="search" placeholder="search...">            
             </div>
          
           
             <p-table
+             #dt1
              [value]="clientList" 
-             [tableStyle]="{ 'min-width': '50rem' }"
+             [tableStyle]="{ 'max-width': '60rem' }"
              [resizableColumns]="true" 
              styleClass="p-datatable-sm"
-             class='ui-datatable' >
+             class='ui-datatable' 
+             [globalFilterFields]="['shortDescription', 'firstName', 'emailAddress']"
+             >
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>ID</th>
-                        <th>Name</th>
+                        <th field="ID">ID</th>
+                        <th field="name">Name</th>
+                        <th field="email">Emails</th>
                         
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-data  >
                     <tr [pSelectableRow]="clientList" (click)="getClientDetails(data.id)">
-                        <td>{{ data.id }}</td>
+                        <td>{{ data.shortDescription }}</td>
                         <td>{{ data.firstName+" "+data.lastName }}</td>
-                        
+                        <td>{{ data.emailAddress }}</td>
                     </tr>
                 </ng-template>
             </p-table>
             
             <div class="float-start"></div>
-            <button class="btn btn-primary float-end mt-4" data-bs-dismiss="modal" >Save Details</button>
+            <button class="btn btn-primary float-end mt-4" data-bs-dismiss="modal">OK</button>
         </div>
        
       </div>
